--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/eventostec
 spring.datasource.username=postgres
 spring.datasource.password=root
 aws.region=us-east-1
+aws.bucket.name=mys3bucket-api-event
